--- a/CommObjectRecognitionObjects/opcua-backend/src-gen/CommObjectRecognitionObjectsOpcUaConfig.cmake.in
+++ b/CommObjectRecognitionObjects/opcua-backend/src-gen/CommObjectRecognitionObjectsOpcUaConfig.cmake.in
@@ -10,6 +10,8 @@ INTERNAL_IMPORT_PACKAGE(CommObjectRecognitionObjects)
 
 # find depndency CommBasicObjectsOpcUa
 FIND_PACKAGE(CommBasicObjectsOpcUa PATHS $ENV{SMART_ROOT_ACE}/modules)
+# find depndency CommManipulatorObjectsOpcUa
+FIND_PACKAGE(CommManipulatorObjectsOpcUa PATHS $ENV{SMART_ROOT_ACE}/modules)
 
 # include generated target configurations
 INCLUDE(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake)
