--- a/CommLocalizationObjects/toolify/src-gen/CMakeLists.txt
+++ b/CommLocalizationObjects/toolify/src-gen/CMakeLists.txt
@@ -1,23 +1,21 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 
-PROJECT("CommLocalizationObjectsOpcUa" VERSION 1.0)
+PROJECT("CommLocalizationObjectsJSON" VERSION 1.0)
 
-FIND_PACKAGE(Open62541Cpp QUIET PATHS $ENV{SMART_ROOT_ACE})
-SET(SmartSoft_CD_API_DIR $ENV{SMART_ROOT_ACE})
-FIND_PACKAGE(SeRoNetSDK QUIET PATHS $ENV{SMART_ROOT_ACE})
+FIND_PACKAGE(nlohmann_json PATHS $ENV{SMART_ROOT_ACE}/modules QUIET)
 
-IF(SeRoNetSDK_FOUND)
+IF(TARGET nlohmann_json::nlohmann_json)
 	SET(CMAKE_CXX_STANDARD 14)
 	
-	FILE(GLOB OPCUA_SRCS ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.cc)
-	FILE(GLOB OPCUA_HDRS ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.hh)
-	# find depndency CommLocalizationObjectsOpcUa
-	FIND_PACKAGE(CommBasicObjectsOpcUa PATHS $ENV{SMART_ROOT_ACE}/modules $ENV{SMART_ROOT_ACE})
+	FILE(GLOB JSON_SRCS ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.cc)
+	FILE(GLOB JSON_HDRS ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.hh)
+	# find depndency CommLocalizationObjectsJSON
+	FIND_PACKAGE(CommBasicObjectsJSON PATHS $ENV{SMART_ROOT_ACE}/modules)
 	
-	ADD_LIBRARY(${PROJECT_NAME} SHARED ${OPCUA_SRCS})
-	TARGET_LINK_LIBRARIES(${PROJECT_NAME} CommLocalizationObjects SeRoNetSDK::SeRoNetSDK)
+	ADD_LIBRARY(${PROJECT_NAME} SHARED ${JSON_SRCS})
+	TARGET_LINK_LIBRARIES(${PROJECT_NAME} CommLocalizationObjects nlohmann_json::nlohmann_json)
 	# link depndency CommBasicObjects
-	TARGET_LINK_LIBRARIES(${PROJECT_NAME} CommBasicObjectsOpcUa)
+	TARGET_LINK_LIBRARIES(${PROJECT_NAME} CommBasicObjectsJSON)
 	TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 	$<INSTALL_INTERFACE:include>
@@ -41,5 +39,5 @@ IF(SeRoNetSDK_FOUND)
 	INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets DESTINATION lib)
 	EXPORT(EXPORT ${PROJECT_NAME}Targets)
 	INSTALL(EXPORT ${PROJECT_NAME}Targets DESTINATION modules)
-	INSTALL(FILES ${OPCUA_HDRS} DESTINATION include/${PROJECT_NAME})
-ENDIF(SeRoNetSDK_FOUND)
+	INSTALL(FILES ${JSON_HDRS} DESTINATION include/${PROJECT_NAME})
+ENDIF(TARGET nlohmann_json::nlohmann_json)
