--- a/CommLocalizationObjects/toolify/src-gen/CommLocalizationObjectsJSONConfig.cmake.in
+++ b/CommLocalizationObjects/toolify/src-gen/CommLocalizationObjectsJSONConfig.cmake.in
@@ -1,15 +1,15 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 
-FIND_PACKAGE(Open62541Cpp QUIET)
-SET(SmartSoft_CD_API_DIR $ENV{SMART_ROOT_ACE}/modules)
-FIND_PACKAGE(SeRoNetSDK QUIET)
-
 FIND_FILE(SMART_MACROS SmartMacros2.cmake PATHS $ENV{SMART_ROOT_ACE}/CMakeMacros /opt/smartSoftAce/CMakeMacros)
 INCLUDE(${SMART_MACROS})
 INTERNAL_IMPORT_PACKAGE(CommLocalizationObjects)
 
-# find depndency CommBasicObjectsOpcUa
-FIND_PACKAGE(CommBasicObjectsOpcUa PATHS $ENV{SMART_ROOT_ACE}/modules $ENV{SMART_ROOT_ACE})
+IF(NOT TARGET nlohmann_json::nlohmann_json)
+	FIND_PACKAGE(nlohmann_json PATHS $ENV{SMART_ROOT_ACE}/modules)
+ENDIF(NOT TARGET nlohmann_json::nlohmann_json)
+
+# find depndency CommBasicObjectsJSON
+FIND_PACKAGE(CommBasicObjectsJSON PATHS $ENV{SMART_ROOT_ACE}/modules)
 
 # include generated target configurations
 INCLUDE(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake)
